# DATA

./: .gitignore  Monthly Fault Data Analysis Jan2023_June2025 Distribution only (1).xlsx  Monthly Fault Data Analysis Jan2023_June2025 system type (version 1).xlsb (1).xlsx  README.md  pyproject.toml
notebooks/: scada_fault_analysis.ipynb
outputs/annotations/: distribution_stage2_annotations.csv
outputs/events/: distribution_events.csv  event_summary.json  system_events.csv
outputs/prepared/: distribution_rows.csv  distribution_summary.json  system_rows.csv  system_summary.json
outputs/reports/: summary.md
outputs/stage1/: random-forest.joblib  stage1_holdout_predictions.csv  stage1_metrics.json  stage1_permutation_importance.csv  stage1_shap_note.txt
outputs/stage2/: logistic-regression.joblib  stage2_holdout_predictions.csv  stage2_metrics.json  stage2_permutation_importance.csv
src/scada_faults/: __init__.py  cli.py  config.py  curation.py  dataset.py  events.py  modeling.py  paths.py  reports.py  utils.py
src/scada_faults.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_events.py  test_pipeline.py  test_utils.py
